--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-data.conf
@@ -11,7 +11,20 @@ flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
- 
+flux.spark.setup-var += {"key": cdr_type","value": "ZTE_DATA_CDR"}
+flux.spark.setup-var += {"key":" it_table_name","value": "CDR.IT_ZTE_DATA"}
+flux.spark.setup-var += {"key":"it_partition_column","value": "FILE_DATE"}
+flux.spark.setup-var += {"key":"date_offset","value": 0}
+flux.spark.setup-var += {"key":"flux_type","value": "PREPAID"}
+flux.spark.setup-var += {"key":"check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
+
+
+flux.spark.setup-var += {"key":"table_type","value": "FT"}
+flux.spark.setup-var += {"key":"table_name","value": "FT_CRA_GPRS"}
+flux.spark.setup-var += {"key":"insert_date_column","value": "DWH_FT_ENTRY_DATE"}
+flux.spark.setup-var += {"key":"database_table_name","value": "MON.FT_CRA_GPRS"}
+flux.spark.setup-var += {"key":"table_partition","value": "SESSION_DATE"}
+
 flux.name = "LOAD_SPARK_FT_DATA"
 
 flux.has-date-processing = true
@@ -41,25 +54,14 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 
+
+
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_spark_ft_cra_gprs.hql"
 
 
-flux.hive.extra-conf += "--hivevar cdr_type=ZTE_DATA_CDR"
-flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_DATA"
-flux.hive.extra-conf += "--hivevar it_partition_column=FILE_DATE"
-flux.hive.extra-conf += "--hivevar date_offset=0"
-flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
-flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
-
-
-flux.hive.extra-conf += "--hivevar table_type=FT"
-flux.hive.extra-conf += "--hivevar table_name=FT_CRA_GPRS"
-flux.hive.extra-conf += "--hivevar insert_date_column=DWH_FT_ENTRY_DATE"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_CRA_GPRS"
-flux.hive.extra-conf += "--hivevar table_partition=SESSION_DATE"
 
 
 
