--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscription.conf
@@ -11,6 +11,11 @@ flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+flux.spark.setup-var += {"key": cdr_type","value": "ZTE_SUBSCRIPTION_CDR"}
+flux.spark.setup-var += {"key":" it_table_name","value": "CDR.IT_ZTE_SUBSCRIPTION"}
+flux.spark.setup-var += {"key":"it_partition_column","value": "FILE_DATE"}
+flux.spark.setup-var += {"key":"flux_type","value": "PREPAID"}
+flux.spark.setup-var += {"key":"check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
 
 flux.name = "LOAD_SPARK_FT_SUBSCRIPTION"
 
@@ -37,12 +42,4 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_spark_ft_subscription.hql"
-
-
-flux.hive.extra-conf += "--hivevar date_offset=90"
-flux.hive.extra-conf += "--hivevar cdr_type=ZTE_SUBSCRIPTION_CDR"
-flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_SUBSCRIPTION"
-flux.hive.extra-conf += "--hivevar it_partition_column=CREATEDDATE"
-flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
-flux.hive.extra-conf += "--hivevar check_file_regex=IN_ZTE_CHECK_FILELIST_2"
 
