--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-subscription.conf
@@ -11,11 +11,11 @@ flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-flux.spark.setup-var += {"key": cdr_type","value": "ZTE_SUBSCRIPTION_CDR"}
-flux.spark.setup-var += {"key":" it_table_name","value": "CDR.IT_ZTE_SUBSCRIPTION"}
-flux.spark.setup-var += {"key":"it_partition_column","value": "FILE_DATE"}
-flux.spark.setup-var += {"key":"flux_type","value": "PREPAID"}
-flux.spark.setup-var += {"key":"check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
+flux.spark.setup-var += {"key": "cdr_type","value": "ZTE_SUBSCRIPTION_CDR"}
+flux.spark.setup-var += {"key": "it_table_name","value": "CDR.IT_ZTE_SUBSCRIPTION"}
+flux.spark.setup-var += {"key": "it_partition_column","value": "FILE_DATE"}
+flux.spark.setup-var += {"key": "flux_type","value": "PREPAID"}
+flux.spark.setup-var += {"key": "check_file_regex","value": "IN_ZTE_CHECK_FILELIST_2"}
 
 flux.name = "LOAD_SPARK_FT_SUBSCRIPTION"
 
