--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -144,7 +144,7 @@ crontasks +=
     cron = "0 43 */1 * * ?",
     configFile = "/PROD/CONF/MVAS/load-spark-ft-smsc-transaction-a2p.conf",
     taskType = "BATCH"
-    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
           {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
@@ -159,6 +159,29 @@ crontasks +=
           , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
         ]
   }
+
+  // FT A MVAS
+  crontasks +=
+    {
+      instanceId = "LOAD_SPARK_FT_QOS_SPECIAL_NUMBER",
+      cron = "0 11 */1 * * ?",
+      configFile = "/PROD/CONF/MVAS/load-spark-ft-qos-special-number.conf",
+      taskType = "BATCH"
+      taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+      timeout = "60 minutes"
+       extraTaskParams : [
+            {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+            , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+            , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+            , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+            , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+            , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+            , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+            , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+            , {"param" : "--conf spark.network.timeout=360s"}
+            , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+          ]
+    }
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_X_INTERCO_FINAL",
@@ -289,3 +312,47 @@ crontasks +=
       , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
+
+  crontasks +=
+    {
+      instanceId = "LOAD_SPARK_FT_COMMERCIAL_SUBSCRIB_SUMMARY",
+      cron = "0 10/20 * * * ?",
+      configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-commercial-subscrib-summary.conf",
+      taskType = "BATCH"
+      taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+      timeout = "65 minutes"
+      extraTaskParams : [
+            {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+            , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+            , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+            , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+            , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+            , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+            , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+            , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+            , {"param" : "--conf spark.network.timeout=360s"}
+            , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+          ]
+    }
+
+    crontasks +=
+      {
+        instanceId = "LOAD_SPARK_FT_GROUP_SUBSCRIBER_SUMMARY",
+        cron = "0 10/20 * * * ?",
+        configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-spark-group-subscriber-summary.conf",
+        taskType = "BATCH"
+        taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+        timeout = "65 minutes"
+        extraTaskParams : [
+                   {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+                   , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+                   , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+                   , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+                   , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+                   , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+                   , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+                   , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+                   , {"param" : "--conf spark.network.timeout=360s"}
+                   , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+                 ]
+      }
