--- a/PROD/CONF/MONITORING/compute_spark_ft_daily_status.conf
+++ b/PROD/CONF/MONITORING/compute_spark_ft_daily_status.conf
@@ -36,10 +36,11 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_ft_daily_status.hql"
 flux.inline.exec-queries += "INSERT INTO MON.SPARK_FT_DAILY_STATUS  VALUES('FT','MSC','FT_COMMERCIAL_SUBSCRIB_SUMMARY','','OK','74377','null','2020-01-10 17:52:40','2020-01-22 17:24:41','###SLICE_VALUE###')"
 flux.inline.exec-queries += "ALTER TABLE MON.SPARK_FT_DAILY_STATUS DROP PARTITION( TABLE_DATE = '###SLICE_VALUE###')"
-flux.inline.exec-queries += "INSERT INTO MON.SPARK_14_FT_DAILY_STATUS  VALUES('FT_COMMERCIAL_SUBSCRIB_SUMMARY','12','12','12','12','12','12','12','12','12','0','12','12','12','12','12','2020-01-10 17:52:40','###SLICE_VALUE###')"
-flux.inline.exec-queries += "ALTER TABLE MON.SPARK_14_FT_DAILY_STATUS DROP PARTITION(EVENT_DATE = '###SLICE_VALUE###')"
+
+flux.inline.post-exec-queries += "INSERT INTO MON.SPARK_14_FT_DAILY_STATUS  VALUES('FT_COMMERCIAL_SUBSCRIB_SUMMARY','12','12','12','12','12','12','12','12','12','0','12','12','12','12','12','2020-01-10 17:52:40','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE MON.SPARK_14_FT_DAILY_STATUS DROP PARTITION(EVENT_DATE = '###SLICE_VALUE###')"
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_spark_ft_daily_status.hql"
-flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_ft_14_daily_status.hql"
+flux.post-exec-queries+= "/PROD/SCRIPTS/MONITORING/compute_ft_14_daily_status.hql"
 
 
 
