--- a/PROD/CONF/MONITORING/compute_spark_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_spark_missing_files.conf
@@ -20,7 +20,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
@@ -32,30 +32,30 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_spark_missing_files.
 
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GENERATE_SEQUENCE_FROM_INTERVALE"
+flux.inline.exec-queries+= "DROP TEMPORARY FUNCTION IF EXISTS GENERATE_SEQUENCE_FROM_INTERVALE"
 flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_INTERVALE as 'cm.orange.bigdata.udf.GenerateSequenceFromIntervale'"
 
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/computes_spark_missing_in_zte_files.hql"
 
-flux.inline.exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS  VALUES('IN_ZTE','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
-flux.inline.exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'IN_ZTE'"
-flux.inline.exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('IN_ZTE','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
-flux.inline.exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS UNION ALL SELECT 'IN_ZTE' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
+flux.inline.post-exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS  VALUES('IN_ZTE','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'IN_ZTE'"
+flux.inline.post-exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('IN_ZTE','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS UNION ALL SELECT 'IN_ZTE' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
 
-flux.inline.exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS2  VALUES('OTHERS','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
-flux.inline.exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS2 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS2 SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'OTHERS'"
-flux.inline.exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('OTHERS','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
-flux.inline.exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS2 UNION ALL SELECT 'OTHERS' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
+flux.inline.post-exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS2  VALUES('OTHERS','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS2 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS2 SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'OTHERS'"
+flux.inline.post-exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('OTHERS','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS2 UNION ALL SELECT 'OTHERS' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
 
-flux.inline.exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
-flux.inline.exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS3 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3 SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'EXTRACT'"
-flux.inline.exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
-flux.inline.exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
-flux.inline.exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS3 UNION ALL SELECT 'EXTRACT' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
+flux.inline.post-exec-queries +="INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE TMP.SPARK_MISSING_FILES_STATUS3 DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO TMP.SPARK_MISSING_FILES_STATUS3 SELECT * FROM MON.SPARK_MISSING_FILES_STATUS WHERE  ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND job_source <> 'EXTRACT'"
+flux.inline.post-exec-queries +="INSERT INTO MON.SPARK_MISSING_FILES_STATUS  VALUES('EXTRACT','OK','2020-01-25 01:40:55','###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE MON.SPARK_MISSING_FILES_STATUS DROP PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "INSERT INTO MON.SPARK_MISSING_FILES_STATUS SELECT * FROM TMP.SPARK_MISSING_FILES_STATUS3 UNION ALL SELECT 'EXTRACT' job_source, if(COUNT(*)=0,'OK','NOK') status, current_timestamp insert_date,'###SLICE_VALUE###' ORIGINAL_FILE_DATE FROM MON.SPARK_MISSING_FILES WHERE ORIGINAL_FILE_DATE='###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE IN ('CHECKFILE','NORMAL')"
 
 
