--- a/PROD/CONF/spark-collect-zsmart-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-zsmart-cron-tasks.conf
@@ -11,7 +11,7 @@ PIG_SCRIPT_LAUNCHER = "/bin/sh"
 SQOOP_LAUNCHER="/bin/sh"
 
 env = "prod"
-
+UPDATE_DT_BASE_IDENTIFICATION
 cronmanagerId = "012"
 
 //--###**************************************#####---
