--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -2300,31 +2300,6 @@ crontasks +=
   }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_SPARK_SPOOL_OM_BICEC_TRANS_RECONCILIATION",
-    cron = "0 14 */1 * * ?",
-    configFile = "/PROD/CONF/SPOOL/load-spark-spool-om-bicec-trans-reconciliation.conf",
-    taskType = "BATCH"
-    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--conf spark.ui.port=50495"}
-      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
-
-
-
 
 crontasks +=
   {
@@ -2369,6 +2344,55 @@ crontasks +=
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
       , {"param" : "--conf spark.ui.port=50497"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_SPOOL_OM_BICEC_TRANS_RECONCILIATION",
+    cron = "0 14 */1 * * ?",
+    configFile = "/PROD/CONF/SPOOL/load-spark-spool-om-bicec-trans-reconciliation.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--conf spark.ui.port=50498"}
+      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_EMEI_TRANSACTION",
+    cron = "0 50 23 * * ?",
+    configFile = "/PROD/CONF/spark-compute-cron-tasks.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "75 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--conf spark.ui.port=50500"}
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
